<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pexeso.v01</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nova_hra">Nová hra</string>
    <string name="hrac">Hraje hráč: </string>
    <string name="pexeso">Hra PEXESO</string>
    <string name="pocetHracu">Zadej počet hráčů</string>
    <string name="novaHra">Nová hra</string>
    <string name="ok">OK</string>
    <string name="hraci">Jméno hráče</string>

</resources>
