<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000ff" >

        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/pexeso"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:text="@string/pocetHracu"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#ffff" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:textColor="#ffff"  >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/hraci"
        android:inputType="text"
        android:visibility="invisible" 
        android:textColor="#ffff"
        android:maxLength="5" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/hraci"
        android:inputType="text"
        android:visibility="invisible"
        android:textColor="#ffff"
        android:maxLength="5"  />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:text="@string/novaHra"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ok" />



</RelativeLayout>